# projeto-csfml

./: CMakeLists.txt  main.c
interfaces/: pauseMenu.c  pauseMenu.h
